--- a/test/node-modules/index.html
+++ b/test/node-modules/index.html
@@ -1,4 +1,13 @@
-<script>
-    require('./wcc_test')
-    require('./wcsc_test')
-</script>
+<html>
+    <head>
+        <title>node test</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <button onclick="location.reload();">刷新</button>
+        <script>
+            require('./wcc_test')
+            require('./wcsc_test')
+        </script>
+    </body>
+</html>
