perf: node modules

--- a/test/node-modules/index.html
+++ b/test/node-modules/index.html
@@ -5,9 +5,12 @@
     </head>
     <body>
         <button onclick="location.reload();">刷新</button>
+        <pre id="result">
+
+        </pre>
+        <!-- <script src="index.js" ></script> -->
         <script>
-            require('./wcc_test')
-            require('./wcsc_test')
+            require('./index')
         </script>
     </body>
 </html>
